Analyse semantic and generate C++ code
Basic semantic-analysis has done:
  class and interface
  structure and primitive
  type checking
  array and array-reference
  reference with immutable and required
  variable and lifetime
  statements
  expressions

The C++ generator has been completed, and
the above semantics have been implemented.